# game-off-2019

./: .gitignore  Cargo.toml
assets/prefab/: bullets.ron
assets/texture/: Floor.ron  Pit0.ron  Rogue.ron  Wall.ron  Walls.ron  all_chest.ron  all_doors.ron  arena1_spritesheet.ron  boss_1.ron  bullet.ron  enemy_simple.ron  lights.ron  rectangle.ron
assets/tilemap/: arena.tmx  arena1.tmx  beginning.tmx  tutorial1.tmx
assets/ui/: example.ron  gameover.ron  story.ron  welcome.ron
config/: bindings.ron  camera.ron  display.ron  enemy.ron  player.ron  wave1.ron
src/: components.rs  config.rs  debug.rs  error.rs  event.rs  lib.rs  main.rs  systems2.rs  tilemap.rs  tiles.rs  util.rs  z_layers.rs
src/objects/: animations.rs  enemy.rs  mod.rs  player.rs
src/objects/enemy/: creepy_boss.rs  mod.rs  simple_enemy.rs
src/states/: dialog.rs  game.rs  gameover.rs  mod.rs  story.rs
src/systems/: animation.rs  attack.rs  bullet.rs  collision.rs  dialog.rs  enemy.rs  garbage.rs  health.rs  mod.rs  player.rs  schedule.rs  spawn.rs  wave.rs
