[package]
name = "thief-academy"
version = "0.1.0"
authors = ["Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2018"

[lib]
name = "thief_engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.13.0"
ron = "0.5.1"

quicksilver = "0.3.19"
nalgebra = "0.18.1"
ncollide2d = "0.20.1"

# logging
log = "0.4"
pretty_env_logger = "0.3"

# CLI
structopt = "0.3.2"

# error handling
snafu = "0.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

image = "0.22.0"
specs = "0.15.1"
specs-derive = "0.4.0"
tiled = "0.7.2"


[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
